--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <!-- jQuery lib -->
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- filter lists -->
   <script src="main.js"></script>
   <style media="screen">
